--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"lint": "eslint .",
-		"pages:build": "bun install && bun run build",
+		"pages:build": "npm ci && npm run build",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
