--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	"dependencies": {
 		"@fontsource-variable/source-serif-4": "^5.2.5",
 		"@fontsource/source-serif-4": "^5.1.1",
-		"d3": "^7.9.0"
+		"@studio-freight/lenis": "^1.0.42",
+		"d3": "^7.9.0",
+		"lenis": "^1.2.3"
 	}
 }
